--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ environment:
 
 dependencies:
   flutter_search_bar: ^2.0.7
+  intl: ^0.15.7
   flutter_spinkit: "^2.1.0"
   flutter:
     sdk: flutter
